# PGStream

./: .gitattributes  .gitignore  BUILD_NOTES.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSES_THIRD_PARTY.md  README.md  THIRD_PARTY_NOTICES.md
PGStream.vst3/Contents/Resources/: moduleinfo.json
assets/web/: app.js  audio-worklet.js  index.html  pcm-worklet.js  style.css
scripts/: audit_windows_daw_visibility.ps1  bootstrap_windows.ps1  build_release_windows.ps1  generate_dev_cert.ps1  verify_artifact_windows.ps1
src/: AudioTapFifo.cpp  AudioTapFifo.h  CertificateManager.cpp  CertificateManager.h  HtmlAssets.cpp  HtmlAssets.h  NetworkInterfaceUtils.cpp  NetworkInterfaceUtils.h  NetworkServer.cpp  NetworkServer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginState.cpp  PluginState.h  Resampler.cpp  Resampler.h  SelfSignedCertificate.cpp  SelfSignedCertificate.h  StreamTypes.h  WebRtcAudioSender.cpp  WebRtcAudioSender.h  WebSocketHub.cpp  WebSocketHub.h
